# culture-calendar.github.io

./: .gitignore  README.md  RESUME.md  REVIEW.md  SKILL.md  apify-metacritic-notes.md  handover.md  probe-notes.md  prototype-findings.md  pyproject.toml  source-registry.md  source-strategy.md  sources.json  toy_calendar.py  watchlist-venues-institutions.md
.github/workflows/: weekly-refresh.yml
.golden/: items.txt  toy-calendar.html
abt_capture/: abt-performances.json
carnegie_capture/: carnegie-events.json
cultural_calendar/: cli.py  legacy.py  registry.py
cultural_calendar/capture/: README.md
cultural_calendar/core/: config.py  html.py
cultural_calendar/sources/: base.py
frick_capture/: frick-exhibitions.json
grand_palais_capture/: grand-palais-exhibitions.json
jalc_capture/: jalc-concerts.json
mam_capture/: mam-paris-exhibitions.json
met_capture/: met-exhibitions.json
met_opera_capture/: met-opera-season.json
moma_capture/: moma-exhibition-links.json  moma-exhibitions-text.txt  moma-exhibitions.html
ocula_capture/: ocula-ny.json
pompidou_capture/: pompidou-exhibitions.json
sftc_capture/: summer-for-the-city.json
tests/: test_cache.py  test_captures.py  test_concert_venues.py  test_credits_discipline.py  test_dates.py  test_moma.py  test_ocula.py  test_registry.py  test_tv.py
tests/fixtures/: nyphil_events.json
va_capture/: va-exhibitions.json
