[project]
name = "cultural-calendar"
version = "0.2.0"
description = "Editorial cultural calendar importer for The New Yorker (prototype)."
requires-python = ">=3.10"
dependencies = ["requests"]

[project.optional-dependencies]
# Test harness only. There is no headless-browser dependency: NY Phil is a JSON API, and the
# two remaining capture-tier sources (MoMA, Frick) are bot-protected against any automated
# browser, so they're refreshed interactively via Claude-in-Chrome (see capture/README.md).
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
